crates/pack/tests/compile_fail/fact_no_new.stderr
error[E0599]: no function or associated item named `construct_unchecked` found for struct `ContextFact` in the current scope
 --> tests/compile_fail/fact_no_new.rs:8:22
  |
8 |         ContextFact::construct_unchecked(ContextKey::Seeds, "test-id", "test-content");
  |                      ^^^^^^^^^^^^^^^^^^^ function or associated item not found in `ContextFact`
  |
note: if you're trying to build a new `ContextFact`, consider using `ContextFact::new_projection` which returns `ContextFact`
 --> $CARGO/converge-pack-$VERSION/src/fact.rs
  |
  | /     pub fn new_projection(
  | |         key: ContextKey,
  | |         id: impl Into<FactId>,
  | |         content: impl Into<String>,
  | |         promotion_record: FactPromotionRecord,
  | |         created_at: impl Into<Timestamp>,
  | |     ) -> Self {
  | |_____________^
